Update UI in Parametric TSU Experiment

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentPrTS.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentPrTS.html
@@ -238,8 +238,7 @@
         </tr>
         <tr>
             <td>${TSUConditions62}</td>
-            <td>${TSUConditions63}</td>
-            <td>${TSUConditions64}</td>
+            <td colspan="2">${TSUConditions63}</td>
             <td>${TSUConditions100}</td>
             <td>${TSUConditions44}</td>
             <td colspan="2">${TSUConditions45}</td>
@@ -406,8 +405,8 @@
     <table style="width:100%;">
          <tr>
             <td width="10%">${TSUResults11}</td>
-            <td width="7%">${TSUResults12}</td>
-            <td width="3%"></td>
+            <td width="12%">${TSUResults12}</td>
+            <td width="5%"></td>
             <td width="10%">${TSUResults13}</td>
             <td width="12%">${TSUResults14}</td>
             <td colspan="2">${TSUResults15}</td>
@@ -476,9 +475,9 @@
         </tr>
         <tr>
            
-            <td width="10%">${TSUResults71}</td>
-            <td width="7%">${TSUResults72}</td>
-            <td width="3%">${TSUResults73}</td>
+            <td>${TSUResults71}</td>
+            <td>${TSUResults72}</td>
+            <td>${TSUResults73}</td>
             <td>${TSUResults74}</td>
             <td colspan="2">${TSUResults75}</td>
             <td></td>
