added the spreadsheet in the analytical experiment

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
@@ -182,6 +182,45 @@
         </tr>        
     </table>
 </div>
+<div id="SpreadsheetTab" title="Spreadsheet">
+	<table style="width: 100%;">
+		<tr>
+			<td colspan="12">${Spreadsheet1}</td>
+		</tr>
+		<tr>
+			<td height="20px"></td>
+		</tr>
+		<tr>
+			<td width="70%">
+				<table width="100%">
+					<tr>
+						<td width="5%">${Spreadsheet21}</td>
+						<td width="10%">${Spreadsheet22}</td>
+						<td width="2%"></td>
+						<td width="10%">${Spreadsheet23}</td>
+						<td width="12%">${Spreadsheet24}</td>
+						<td width="2%"></td>
+						<td width="10%">${Spreadsheet25}</td>
+						<td width="2%">${Spreadsheet26}</td>
+						<td width="2%"></td>
+						<td width="10%">${Spreadsheet27}</td>
+						<td width="2%">${Spreadsheet28}</td>
+						<td></td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td height="20px"></td>
+		</tr>
+		<tr>
+			<td colspan="12">${Spreadsheet3}</td>
+		</tr>
+		<tr>
+			<td height="20px"></td>
+		</tr>
+	</table>
+</div>
 <div id="ConditionsHPLCTab" title= "Conditions HPLC">
     <table style="width:100%;">
         <tr>
