Add Report Details tab to parametric CR exp

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentPrCR.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentPrCR.html
@@ -549,3 +549,11 @@
         </tr>
     </table>
 </div>
+
+<div id="ReportDetailsTab" title= "Report Details">
+    <table style="width:100%;">
+        <tr>
+            <td></td>
+        </tr>
+    </table>
+</div>
