task 26450 by Tehila

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
@@ -438,6 +438,11 @@
 </div>
 <div id="TestedComponentsTab" title= "Tested Components">
     <table style="width:100%;">
+       <tr>
+            <td>${TestedComponenets01}</td>
+            <td>${TestedComponenets02}</td>
+            <td>${TestedComponenets03}</td>
+        </tr>
         <tr>
             <td>${TestedComponenets1}</td>
         </tr>
