completed task 26464 by Tehila

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
@@ -438,10 +438,16 @@
 </div>
 <div id="TestedComponentsTab" title= "Tested Components">
     <table style="width:100%;">
-       <tr>
-            <td>${TestedComponenets01}</td>
-            <td>${TestedComponenets02}</td>
-            <td>${TestedComponenets03}</td>
+        <tr>
+            <td>
+	        	 <table width="10%">
+			         <tr>
+			            <td width="12%" >${TestedComponenets01}</td>
+			            <td width="3%">${TestedComponenets02}</td>
+			            <td width="85%">${TestedComponenets03}</td>
+		            </tr>
+	            </table>
+            </td>
         </tr>
         <tr>
             <td>${TestedComponenets1}</td>
