fixed bug in experiment analytical by Tehila

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
@@ -462,6 +462,17 @@
 </div>
 <div id="EquipmentTab" title= "Equipment">
     <table style="width:100%;">
+     <tr>
+            <td>
+	        	 <table width="10%">
+			         <tr>
+			            <td width="12%" >${Equipment01}</td>
+			            <td width="3%">${Equipment02}</td>
+			            <td width="85%">${Equipment03}</td>
+		            </tr>
+	            </table>
+            </td>
+        </tr>
         <tr>
             <td>${Equipment1}</td>
         </tr>
