fixed bug in inserttoselect of wrong sessionid

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentAn.html
@@ -609,6 +609,39 @@
         </tr>
     </table>
 </div>
+<div id="SpreadsheetResultsTab" title="Spreadsheet Results">
+	<table style="width: 100%;">
+		<tr>
+			<td colspan="12">${SpreadsheetResults1}</td>
+		</tr>
+		<tr>
+			<td height="20px"></td>
+		</tr>
+		<tr>
+			<td width="70%">
+				<table width="100%">
+					<tr>
+						<td width="5%">${SpreadsheetResults21}</td>
+						<td width="10%">${SpreadsheetResults22}</td>
+						<td width="2%"></td>
+						<td width="10%">${SpreadsheetResults23}</td>
+						<td width="12%">${SpreadsheetResults24}</td>
+						<td width="2%"></td>
+						<td width="10%">${SpreadsheetResults25}</td>
+						<td width="2%">${SpreadsheetResults26}</td>
+						<td width="2%"></td>
+						<td width="10%">${SpreadsheetResults27}</td>
+						<td width="2%">${SpreadsheetResults28}</td>
+						<td></td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td height="20px"></td>
+		</tr>
+	</table>
+</div>
 <div id="ResultsTab" title= "Results">
     <table style="width:100%;">
         <tr>
