--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -31,6 +31,12 @@
 		<td colspan="8"></td>		
 	</tr>
 	<tr>
+		<td colspan="8">${bookmarkStep}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
 		<td colspan="8">${bookmarkSample}</td>
 	</tr>
 	<tr style="height: 25px;">
