--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixDocument.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixDocument.html
@@ -19,7 +19,7 @@
 	</tr>
 	<tr>
 		<td>${bookmark31}</td>
-		<td>${bookmark32}</td>
+		<td width="50%">${bookmark32}</td>
 		<td>${bookmark33}</td>
 		<td>${bookmark34}</td>
 	</tr>
@@ -27,9 +27,9 @@
 		<td colspan="4" height="20"></td>
 	</tr>
 	<tr>
-		<td style="width: 15%;">${bookmark41}</td>
-		<td colspan = "2">${bookmark42}</td>
-		<!-- <td style="width: 10%;">${bookmark43}</td> -->
+		<td width= "15%">${bookmark41}</td>
+		<td  width="50%">${bookmark42}</td>
+	 <td width="20%">${bookmark43}</td> 
 		<td>${bookmark44}</td>
 	</tr>
 	<tr>
@@ -40,8 +40,8 @@
 	</tr>
 	<tr>
 		<td>${bookmark61}</td>
-		<td colspan = "2">${bookmark62}</td>
-		<!-- <td>${bookmark63}</td> -->
+		<td  width="50%">${bookmark62}</td>
+	    <td>${bookmark63}</td>
 		<td>${bookmark64}</td>
 	</tr>
 	<tr>
@@ -52,8 +52,8 @@
 	</tr>
 	<tr>
 		<td>${bookmark81}</td>
-		<td colspan = "2">${bookmark82}</td>
-		<!-- <td>${bookmark83}</td> -->
+		<td  width="50%">${bookmark82}</td>
+		<td>${bookmark83}</td>
 		<td>${bookmark84}</td>
 	</tr>
 	<tr>
@@ -63,9 +63,12 @@
 		<td>${bookmark94}</td>
 	</tr>
 	<tr>
+		<td colspan="4" height="20"></td>
+	</tr>
+	<tr>
 		<td>${bookmark101}</td>
-		<td colspan = "2">${bookmark102}</td>
-		<!-- <td>${bookmark103}</td> -->
+		<td  width="50%">${bookmark102}</td>
+		<td>${bookmark103}</td>
 		<td>${bookmark104}</td>
 	</tr>
 	<tr>
