--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixEquipment.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixEquipment.html
@@ -2,12 +2,13 @@
     <tr>
         <td width="10%">${bookmark11}</td>
         <td>${bookmark12}</td>
+        <td  width="30%"></td>
         <td></td>
     </tr>
     <tr>
         <td width="10%">${bookmark21}</td>
-        <td colspan="3">${bookmark22}</td>
-        <td></td>
+        <td colspan="2">${bookmark22}</td>
+        <td width="30%" ${bookmark23}></td>
     </tr>
     <tr>
         <td colspan="5" height="20"></td>
@@ -24,7 +25,7 @@
     </tr>
     <tr>
          <td width="10%">${bookmark31}</td>
-        <td colspan="3" >${bookmark32}</td>
+        <td colspan="2" >${bookmark32}</td>
         <td></td>
     </tr>
     <tr>
