--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -43,6 +43,17 @@
 		<td colspan="8"></td>		
 	</tr>
 	<tr>
+		<td colspan="8">${bookmarkfilter1}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr><tr>
+		<td colspan="8">${bookmarkfilter2}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
 		<td colspan=2>
 			<div style="width: 335px;">
 				<div style="float:left">${bookmark61}</div>
