--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -54,6 +54,46 @@
 		<td colspan="8"></td>		
 	</tr>
 	<tr>
+		<td>${result01}</td>
+		<td>${result02}</td>
+		<td></td>
+		<td>${result04}</td>
+		<td>${result05}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
+		<td>${result11}</td>
+		<td>${result12}</td>
+		<td></td>
+		<td>${result13}</td>
+		<td>${result14}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
+		<td>${result21}</td>
+		<td>${result22}</td>
+		<td></td>
+		<td>${result23}</td>
+		<td>${result24}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
+		<td>${result31}</td>
+		<td>${result32}</td>
+		<td></td>
+		<td>${result33}</td>
+		<td>${result34}</td>
+	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	<tr>
 		<td colspan=2>
 			<div style="width: 335px;">
 				<div style="float:left">${bookmark61}</div>
