--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -53,12 +53,12 @@
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
 	</tr>
+	<table style=" border: 1px solid #bdbdbd; background-color: white;">
 	<tr>
-		<td>${result01}</td>
-		<td>${result02}</td>
+		<td width="15%">${result01}</td>
+		<td width="25%">${result02}</td>
 		<td></td>
-		<td>${result04}</td>
-		<td></td>
+		<td width= "30%">${result04}</td>
 	</tr>
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
@@ -67,7 +67,7 @@
 		<td>${result11}</td>
 		<td>${result12}</td>
 		<td></td>
-		<td>${result13}</td>
+		<td width="1%">${result13}</td>
 		<td>${result14}</td>
 	</tr>
 	<tr style="height: 25px;">
@@ -77,7 +77,7 @@
 		<td>${result21}</td>
 		<td>${result22}</td>
 		<td></td>
-		<td>${result23}</td>
+		<td width="1%">${result23}</td>
 		<td>${result24}</td>
 	</tr>
 	<tr style="height: 25px;">
@@ -87,9 +87,13 @@
 		<td>${result31}</td>
 		<td>${result32}</td>
 		<td></td>
-		<td>${result33}</td>
+		<td width="1%">${result33}</td>
 		<td>${result34}</td>
 	</tr>
+	<tr style="height: 25px;">
+		<td colspan="8"></td>		
+	</tr>
+	</table>
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
 	</tr>
