fixed experimentReport matrix

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -53,15 +53,14 @@
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
 	</tr>
-	<table style=" border: 1px solid #bdbdbd; background-color: white;">
 	<tr>
 		<td width="15%">${result01}</td>
 		<td width="25%">${result02}</td>
 		<td></td>
-		<td width= "30%">${result04}</td>
+		<td colspan="2">${result04}</td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="8"></td>		
+		<td colspan="5"></td>		
 	</tr>
 	<tr>
 		<td>${result11}</td>
@@ -71,7 +70,7 @@
 		<td>${result14}</td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="8"></td>		
+		<td colspan="5"></td>		
 	</tr>
 	<tr>
 		<td>${result21}</td>
@@ -81,7 +80,7 @@
 		<td>${result24}</td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="8"></td>		
+		<td colspan="5"></td>		
 	</tr>
 	<tr>
 		<td>${result31}</td>
@@ -91,9 +90,8 @@
 		<td>${result34}</td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="8"></td>		
+		<td colspan="5"></td>		
 	</tr>
-	</table>
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
 	</tr>
