update experimentReport matrix

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperimentReport.html
@@ -53,47 +53,58 @@
 	<tr style="height: 25px;">
 		<td colspan="8"></td>		
 	</tr>
+	<tr colspan="8">
+	      <td colspan="8" align="center">
+		      <table style="width:100%;border: 1px solid #bdbdbd; background-color: white;">
 	<tr>
 		<td width="15%">${result01}</td>
 		<td width="25%">${result02}</td>
-		<td></td>
+		<td wisth="10%"></td>
 		<td colspan="2">${result04}</td>
+		<td width= "40%"></td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="5"></td>		
+		<td colspan="6"></td>		
 	</tr>
 	<tr>
 		<td>${result11}</td>
 		<td>${result12}</td>
 		<td></td>
-		<td width="1%">${result13}</td>
-		<td>${result14}</td>
+		<td width="2%" style="vertical-align:middle;">${result13}</td>
+		<td width="15%">${result14}</td>
+		<td></td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="5"></td>		
+		<td colspan="6"></td>		
 	</tr>
 	<tr>
 		<td>${result21}</td>
 		<td>${result22}</td>
 		<td></td>
-		<td width="1%">${result23}</td>
+		<td width="2%" style="vertical-align:middle;">${result23}</td>
 		<td>${result24}</td>
+		<td></td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="5"></td>		
+		<td colspan="6"></td>		
 	</tr>
 	<tr>
 		<td>${result31}</td>
 		<td>${result32}</td>
 		<td></td>
-		<td width="1%">${result33}</td>
+		<td width="2%" style="vertical-align:middle;">${result33}</td>
 		<td>${result34}</td>
+		<td></td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="5"></td>		
+		<td colspan="6"></td>		
+	</tr>
+	</table>
+	</td>
+	<td width="2%"></td>
 	</tr>
 	<tr style="height: 25px;">
-		<td colspan="8"></td>		
+		<td colspan="9"></td>		
 	</tr>
 	<tr>
 		<td colspan=2>
