--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixForSubAndSubSub.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixForSubAndSubSub.html
@@ -113,6 +113,14 @@
         <td></td>
 		
 	</tr>
+	<tr>
+		<td colspan="6" height="20"></td>		
+	</tr>
+	<tr>
+		<td>${General111}</td>
+		<td colspan="4">${General112}</td>
+        <td></td>
+	</tr>
 </table>
 </div>
 <div id="SuppliersTab" title="Suppliers">
