--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixStepMinFr.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixStepMinFr.html
@@ -3,11 +3,13 @@
 		<td colspan="5"></td>		
 	</tr>
 	<tr>
+	    <td style="width:1%;"></td>
 		<td style="width:10%;">${bookmark11}</td>
 		<td style="width:20%;">${bookmark12}</td>
 		<td style="width:10%;">${bookmark13}</td>
-		<td style="width:20%;">${bookmark14}</td>
+		<td style="width:18%;">${bookmark14}</td>
 		<td style="width:40%;padding-right:10px;">
+		<td style="width:1%;"></td>
 		
 			<img src="../skylineFormWebapp/images/save_display.png" 
 			     style="cursor: pointer;border:1px solid #0a0a0a;border-radius:3px;padding: 4px 13px 4px 13px;float:right;" 
@@ -16,7 +18,7 @@
 		</td>
 	</tr>
 	<tr style="height: 10px;">
-		<td colspan="5"></td>		
+		<td colspan="7"></td>		
 	</tr>
 	<tr style="height: 10px;">
 	
@@ -27,16 +29,20 @@
 	</tr>
 	
 	<tr>
-		<td colspan="5">${bookmark25}</td>		
+	    <td style="width:1%;"></td>
+		<td colspan="5">${bookmark25}</td>	
+		<td style="width:1%;"></td>	
 	</tr>
 	<tr style="height: 10px;">
-		<td colspan="5"></td>		
+		<td colspan="7"></td>		
 	</tr>
 	<tr>
-		<td colspan="5">${bookmark35}</td>		
+	    <td style="width:1%;"></td>
+		<td colspan="5">${bookmark35}</td>	
+		<td style="width:1%;"></td>	
 	</tr>
 	<tr style="height: 10px;">
-		<td colspan="5"></td>		
+		<td colspan="7"></td>		
 	</tr>
 	<tr>
 		<td><div id="upperFiltersProducts" class="upper-filters"><div>${upperFilters14}</div>
@@ -44,16 +50,20 @@
 					</tr>	
 	</tr>
 	<tr>
-		<td colspan="5">${bookmark45}</td>		
+	    <td style="width:1%;"></td>
+		<td colspan="5">${bookmark45}</td>
+        <td style="width:1%;"></td>	
 	</tr>
 	<tr style="height: 10px;">
-		<td colspan="5"></td>		
+		<td colspan="7"></td>		
 	</tr>
 	<tr>
+	    <td style="width:1%;"></td>
 		<td>${bookmark91}</td>
 		<td>${bookmark92}</td>
 		<td>${bookmark93}</td>
 		<td>${bookmark94}</td>
 		<td>${bookmark95}</td>
+		<td style="width:1%;"></td>
 	</tr>
 </table>
