--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
@@ -1,193 +1,199 @@
 <div id="GeneralTab" title="General">
-    <table style="width:100%;">
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General11}</td>
-            <td>${General12}</td>
-            <td></td>
-            <td>${General13}</td>
-            <td>${General14}</td>
-            <td>${General15}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General21}</td>
-            <td>${General22}</td>
-            <td width="10%"></td>
-            <td>${General23}</td>
-            <td>${General24}</td>
-            <td>${General25}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General31}</td>
-            <td>${General32}</td>
-            <td width="10%"></td>
-            <td>${General33}</td>
-            <td>${General34}</td>
-            <td>${General35}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General41}</td>
-            <td>${General42}</td>
-            <td width="10%"></td>
-            <td>${General43}</td>
-            <td>${General44}</td>
-            <td>${General45}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General51}</td>
-            <td>${General52}</td>
-            <td width="10%"></td>
-            <td>${General53}</td>
-            <td>${General54}</td>
-            <td>${General55}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General61}</td>
-            <td>${General62}</td>
-            <td width="10%"></td>
-            <td>${General63}</td>
-            <td>${General64}</td>
-            <td>${General65}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General71}</td>
-            <td>${General72}</td>
-            <td width="10%"></td>
-            <td>${General73}</td>
-            <td>${General74}</td>
-            <td>${General75}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General81}</td>
-            <td>${General82}</td>
-            <td width="10%"></td>
-            <td>${General83}</td>
-            <td>${General84}</td>
-            <td>${General85}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General91}</td>
-            <td>${General92}</td>
-            <td width="10%"></td>
-            <td>${General93}</td>
-            <td>${General94}</td>
-            <td>${General95}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General101}</td>
-            <td colspan="5">${General102}</td>
-            
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General111}</td>
-            <td>${General112}</td>
-            <td width="10%"></td>
-            <td>${General113}</td>
-            <td>${General114}</td>
-            <td>${General115}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General121}</td>
-            <td>${General122}</td>
-            <td width="10%"></td>
-            <td>${General123}</td>
-            <td>${General124}</td>
-            <td>${General125}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General131}</td>
-            <td>${General132}</td>
-            <td width="10%"></td>
-            <td>${General133}</td>
-            <td>${General134}</td>
-            <td>${General135}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General141}</td>
-            <td>${General142}</td>
-            <td width="10%"></td>
-            <td>${General143}</td>
-            <td>${General144}</td>
-            <td>${General145}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-            <td>${General151}</td>
-            <td>${General152}</td>
-            <td width="10%"></td>
-            <td>${General153}</td>
-            <td>${General154}</td>
-            <td>${General155}</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-        <tr>
-       	    <td colspan="1">${General161}</td>
-            <td colspan="5">${General162}</td>
-        </tr>
-        <tr>
-            <td colspan="6" height="20"></td>
-        </tr>
-     </table>
+    <div>
+	    <table style="width:100%;">
+	        <tr>
+	       		<td width ="40%">
+	       			<table>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td width = "45%">${General11}</td>
+				            <td width="45%">${General12}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General21}</td>
+				            <td>${General22}</td>
+				            <td width="10%"></td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General31}</td>
+				            <td>${General32}</td>
+				            <td width="10%"></td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General41}</td>
+				            <td>${General42}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General51}</td>
+				            <td>${General52}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${lValidated}</td>
+				            <td>${Validated}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${Gc_Hplc}</td>
+				            <td></td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General61}</td>
+				            <td>${General62}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General71}</td>
+				            <td>${General72}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General81}</td>
+				            <td>${General82}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General91}</td>
+				            <td>${General92}</td>
+				            <td></td>
+				        </tr>
+				        <tr>
+				            <td colspan="3" height="20"></td>
+				        </tr>
+				        <tr >
+							<td colspan="3">
+								<table id="advancedBorder" style="border:1px solid #bdbdbd; border-collapse: initial;" >
+									<tr>
+										<td>
+											<div id="imgAdvSearchFormSearch" style="float: left;">
+											<img src="../skylineFormWebapp/images/arrow_r.png" class="arrows-search">
+											</div>
+											<div>${bookmark41}</div>
+										</td>
+										<td>${bookmark42}</td>
+										<td></td>
+									</tr>
+									<tr>
+										<td colspan="3" height="20"></td>
+									</tr>
+									<tbody class="content" >
+										<tr>
+											<td width="45%">${General111}</td>
+											<td width="45%">${General112}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+										<tr>
+											<td>${General121}</td>
+											<td>${General122}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+										<tr>
+											<td>${General131}</td>
+											<td>${General132}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+										<tr>
+											<td>${General141}</td>
+											<td>${General142}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+										<tr>
+											<td>${General151}</td>
+											<td>${General152}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+										<tr>
+											<td>${General161}</td>
+											<td>${General162}</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td colspan="3" height="20"></td>
+										</tr>
+									</tbody>
+								</table>
+							</td>
+							<td></td>
+						</tr>
+					</table>
+				</td>
+				<td width="60%">
+					<table>
+				        <tr>
+				            <td>${General201}</td>
+				        </tr>
+				        <tr>
+				            <td height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General211}</td>
+				        </tr>
+				        <tr>
+				            <td height="20"></td>
+				        </tr>
+				        <tr>
+				            <td>${General221}</td>
+				        </tr>
+				        <tr>
+				            <td height="20"></td>
+				        </tr>
+			        </table>
+		        </td>
+	        </tr>
+	     </table>
+     </div>
 </div>
 <div id="DocumentsTab" title= "Documents">
     <table style="width:100%;">
@@ -207,4 +213,28 @@
         </tr>
     </table>
 </div>
-
+<div id="FeedbacksTab" title= "HiddenFields">
+    <table style="width:100%;">
+        <tr>
+            <td>${HiddenFields11}</td>
+            <td>${HiddenFields12}</td>
+            <td></td>
+            <td>${HiddenFields13}</td>
+            <td>${HiddenFields14}</td>
+            <td>${HiddenFields15}</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="6" height="20"></td>
+        </tr>
+        <tr>
+            <td>${HiddenFields21}</td>
+            <td>${HiddenFields22}</td>
+            <td width="10%"></td>
+            <td>${HiddenFields23}</td>
+            <td>${HiddenFields24}</td>
+            <td>${HiddenFields25}</td>
+            <td></td>
+        </tr>
+    </table>
+</div>
