updated the additional info toggling in the template form

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
@@ -122,7 +122,7 @@
 									<tr>
 										<td colspan="3" height="20"></td>
 									</tr>
-									<tbody class="content" >
+									<tbody class="content" style="display:none" >
 										<tr>
 											<td width="30%">${General111}</td>
 											<td width="40%">${General112}</td>
@@ -264,5 +264,4 @@
     	    });
    		});
 	});
-	$("#imgAdvSearchFormSearch").click();
 </script>
