--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixTemplate.html
@@ -108,7 +108,7 @@
 				        </tr>
 				        <tr >
 							<td colspan="3">
-								<table id="advancedBorder" style="border:1px solid #bdbdbd; border-collapse: initial;" >
+								<table id="advancedBorder" style="border-collapse: initial;" >
 									<tr>
 										<td>
 											<div id="imgAdvSearchFormSearch" style="float: left;">
