--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixRequestNew.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixRequestNew.html
@@ -41,6 +41,10 @@
 	        <div class="layout-cell cell-element">${General64}</div>
 	        <div class="layout-cell cell-label padded column-fourth">${General83}</div>
 	        <div class="layout-cell cell-element">${General84}</div>
+	        <div class="layout-cell cell-element" style="float:right;">
+		        <div class="layout-cell">${General211}</div>
+		        <div class="layout-cell">${General212}</div>
+	        </div>
 	  </div> 
 	  <div class="layout-row">
 	        <div class="layout-cell cell-label column-first">${General25}</div>
