--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixForSubProject.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixForSubProject.html
@@ -7,7 +7,7 @@
 		<td width="12%">${General13}</td>
 		<td width="20%">${General14}</td>
 		<td width="3%"></td>
-		<td colspan="2" width="30%" rowspan="12">
+		<td colspan="2" width="30%" rowspan="13">
 								<table id="advancedBorder" style="border-collapse: initial;" >
 									<tr>
 										<td width="2%">
@@ -106,6 +106,9 @@
 		<td></td>
 		<td>${General63}</td>
 		<td>${General64}</td>
+	</tr>
+	<tr>
+		<td colspan="8" height="20"></td>		
 	</tr>
 	<tr>
 		<td>${General811}</td>
