--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperiment.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixExperiment.html
@@ -243,6 +243,12 @@
             	</div>
             </td>
         </tr>
+        <tr>
+            <td></td>
+            <td width="5%"></td>
+            <td>${ReactionSummary5}</td>
+            <td>${ReactionSummary6}</td>
+        </tr>
         <!-- <tr> 
         	<td width="10%" style="vertical-align: top;"></td>
             <td width="5%"></td>           
