--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixStep.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixStep.html
@@ -393,6 +393,10 @@
             <td height="40px"></td>
         </tr>
         <tr>
+            <td>${parameterSearch1}</td>
+            <td>${parameterSearch2}</td>
+        </tr>
+        <tr>
             <td>${Actions3}</td>
         </tr>
         <tr>
