--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixPermissionScheme.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixPermissionScheme.html
@@ -21,9 +21,10 @@
 		<td colspan="4" height="20"></td>		
 	</tr>
 	<tr>
-		<td>${Screens1}</td>
-		<td>${Screens2}</td>
-		<td>${Screens3}</td>
+		<td width="2%">${Screens1}</td>
+		<td widtg="48%">${Screens2}</td>
+		<td width="20%">${Screens3}</td>
+		<td width="30%">${Screens4}</td>
 	</tr>
 	<tr>
 		<td colspan="4" height="20"></td>		
