--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixSample.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrixSample.html
@@ -122,6 +122,7 @@
             <td width="10%"></td>
             <td width="10%">${General195}</td>
             <td width="15%">${General196}</td>
+            <td width="3%">${General197}</td>
             <td></td>
         </tr>
         <tr>
