--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
@@ -1,7 +1,7 @@
 <table style="width: 100%;">
 	<tr>
-	<td style="width: 15%;">${bookmark11}</td>
-		<td style="width: 20%;">${bookmark12}</td>
+	<td style="width: 10%;">${bookmark11}</td>
+		<td style="width: 18%;">${bookmark12}</td>
 		<td style="width: 2%;">${bookmark13}</td>
 		<td">${bookmark14}</td>
 		<!-- <td style="width: 15%;">${bookmark11}</td>
@@ -36,7 +36,7 @@
 		<td>${bookmark32}</td>
 		<td>${bookmark41}</td>
 		<td>${bookmark42}</td>
-		<td width="20%">${bookmark43}</td>
+		<td>${bookmark43}</td>
 		<td>${bookmark34}</td>
 	</tr>
 	<tr>
@@ -47,7 +47,7 @@
 		<td>${bmarkLink12}</td>
 		<td>${bookmark51}</td>
 		<td>${bookmark52}</td>
-		<td width="20%">${bookmark53}</td>		
+		<td>${bookmark53}</td>		
 		<td>${bookmark33}</td>
 		
 	</tr>
@@ -55,9 +55,9 @@
 		<td colspan="6" height="20"></td>
 	</tr>
 	<tr>
-		<td width="10%">${bookmark61}</td>
-		<td width="10%">${bookmark62}</td>
-		<td width="2%" >${bookmark63}</td>
+		<td>${bookmark61}</td>
+		<td>${bookmark62}</td>
+		<td>${bookmark63}</td>
 		<td width="10%" >${bookmark64}</td>
 		<td colspan="2" rowspan="20">${bookmark54}</td>
 		
@@ -69,10 +69,9 @@
 		<td>${bookmark71}</td>
 		<td>${bookmark72}</td>
 		<td width="2%">${bookmark73}</td>
-		<td></td>
 		<td>${bookmark74}</td>
 		<td>${bookmark44}</td>
-		<td width="5%"></td>
+		<td></td>
 	</tr>
 	<tr>
 		<td colspan="6" height="20"></td>
