--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
@@ -119,64 +119,25 @@
 		<td></td>
 	</tr>
 	<tr>
-		<td colspan="6" height="20"></td>
-	</tr>
-	<tr>
-<!-- 		<td>${bmarkLink11}</td>
-		<td>${bmarkLink12}</td>
- -->	
- 		<td></td>
- 		<td></td>
- 		<td>${bmarkLink13}</td>
-		<td>${bmarkLink14}</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td colspan="6" height="20"></td>
-	</tr>
-	<tr>
 		<td>${bookmark141}</td>
 		<td>${bookmark142}</td>
 		<td>${bookmark143}</td>
-		<td></td>
-		<td></td>
-		<td></td>	
-	</tr>
-	<tr>
-		<td colspan="6" height="20"></td>
+		<td>${bmarkLink13}</td>
+		<td>${bmarkLink14}</td>	
 	</tr>
 	<tr>
 		<td>${bmarkLink31}</td>
 		<td>${bmarkLink32}</td>
 		<td>${bmarkLink33}</td>
 		<td>${bmarkLink34}</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td colspan="6" height="20"></td>
+		<td>${bookmark121}</td>
+		<td>${bookmark122}</td>
 	</tr>
 	<tr>
 		<td>${bmarkLink21}</td>
 		<td>${bmarkLink22}</td>
 		<td>${bmarkLink23}</td>
 		<td>${bmarkLink24}</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td colspan="6" height="20"></td>
-	</tr>
-	<tr>
-		<td colspan="2">${bookmark121}</td>
-		<td colspan="2">${bookmark122}</td>
-		<td colspan="2"></td>
-	</tr>
-	<tr>
-		<td colspan="6" height="20"></td>
-	</tr>
-	<tr>
-		<td colspan="6">${bookmark131}</td>
+		<td>${bookmark131}</td>
 	</tr>
 </table>
