fixed some issue (create sample as popup)

--- a/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
+++ b/Skyline_Form/src/main/webapp/skylineFormWebapp/html_pool/matrix4.html
@@ -3,7 +3,8 @@
 	<td style="width: 15%;">${bookmark11}</td>
 		<td style="width: 20%;">${bookmark12}</td>
 		<td style="width: 2%;">${bookmark13}</td>
-		<td">${bookmark14}</td>
+		<td>${bookmark14}</td>
+		<td colspan="2" id="popupButton"></td>
 		<!-- <td style="width: 15%;">${bookmark11}</td>
 		<td style="width: 25%;">${bookmark12}</td>
 		<td style="width: 10%;">${bookmark13}</td>
